--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.0.3
+version: 0.0.4
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
+repository: https://github.com/wiatec/flutter_common
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
