--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.0.4
+version: 0.1.4
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
@@ -17,17 +17,20 @@ dependencies:
   cupertino_icons: ^0.1.2
   intl: ^0.15.8
   dio: ^2.1.10
-  device_info: ^0.4.0+1
-  package_info: ^0.4.0+4
   encrypt: ^3.1.0
   crypto: ^2.0.6
   screen: ^0.0.5
-  url_launcher: ^5.0.2
-  shared_preferences: ^0.5.2+1
   provide: ^1.0.2
-  simple_permissions: ^0.1.9
+  device_info: ^0.4.0+1
+  package_info: ^0.4.0+4
+  json_annotation: ^2.4.0
+  shared_preferences: ^0.5.2+1
+  url_launcher: ^5.0.2
 
+  # widgets
   cached_network_image: ^1.0.0
+  flutter_webview_plugin: ^0.3.5
+  flutter_slidable: ^0.5.3
 
 
 dev_dependencies:
