--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.1.9
+version: 0.2.2
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
@@ -26,6 +26,8 @@ dependencies:
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.2+1
   url_launcher: ^5.0.2
+  rxdart: ^0.22.0
+  local_auth: ^0.5.2+4
 
   # widgets
   cached_network_image: ^1.0.0
