--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.2.6
+version: 0.2.8
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
@@ -28,6 +28,7 @@ dependencies:
   url_launcher: ^5.0.2
   rxdart: ^0.22.0
   local_auth: ^0.5.2+4
+  logger: ^0.7.0+2
 
   # widgets
   cached_network_image: ^1.0.0
