--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,23 +16,23 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   intl: ^0.15.8
-  dio: ^2.1.10
-  encrypt: ^3.1.0
-  crypto: ^2.0.6
+  dio: ^3.0.1
+  encrypt: ^3.3.1
+  crypto: ^2.1.3
   screen: ^0.0.5
   provide: ^1.0.2
-  device_info: ^0.4.0+1
-  package_info: ^0.4.0+4
-  json_annotation: ^2.4.0
-  shared_preferences: ^0.5.2+1
-  url_launcher: ^5.0.2
-  rxdart: ^0.22.0
-  local_auth: ^0.5.2+4
+  device_info: ^0.4.0+2
+  package_info: ^0.4.0+6
+  json_annotation: ^3.0.0
+  shared_preferences: ^0.5.3+4
+  url_launcher: ^5.1.3
+  rxdart: ^0.22.2
+  local_auth: ^0.6.0
   logger: ^0.7.0+2
 
   # widgets
-  cached_network_image: ^1.0.0
-  flutter_webview_plugin: ^0.3.5
+  cached_network_image: ^1.1.1
+  flutter_webview_plugin: ^0.3.8
   flutter_slidable: ^0.5.3
 
 
