--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.3.3
+version: 0.3.5
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
@@ -23,12 +23,14 @@ dependencies:
   provide: ^1.0.2
   device_info: ^0.4.0+2
   package_info: ^0.4.0+6
+  connectivity: ^0.4.4
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3+4
   url_launcher: ^5.1.3
   rxdart: ^0.22.2
   local_auth: ^0.6.0
   logger: ^0.7.0+2
+  sqflite: ^1.1.6+5
 
   # widgets
   cached_network_image: ^1.1.1
