--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.3.5
+version: 0.3.6
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
@@ -21,12 +21,15 @@ dependencies:
   crypto: ^2.1.3
   screen: ^0.0.5
   provide: ^1.0.2
+  path: ^1.6.4
+  share: ^0.6.2+1
+  path_provider: ^1.3.0
   device_info: ^0.4.0+2
   package_info: ^0.4.0+6
   connectivity: ^0.4.4
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3+4
-  url_launcher: ^5.1.3
+  url_launcher: ^5.1.4
   rxdart: ^0.22.2
   local_auth: ^0.6.0
   logger: ^0.7.0+2
@@ -34,8 +37,8 @@ dependencies:
 
   # widgets
   cached_network_image: ^1.1.1
-  flutter_webview_plugin: ^0.3.8
   flutter_slidable: ^0.5.3
+  webview_flutter: ^0.3.14+1
 
 
 dev_dependencies:
