--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.4.1
+version: 0.4.5
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^1.1.1
   flutter_slidable: ^0.5.3
   webview_flutter: ^0.3.14+1
+  fluttertoast: ^3.1.3
 
 
 dev_dependencies:
