--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.4.7
+version: 0.5.0
 author: patrick<xcpxcp198608@gmail.com>
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
@@ -16,29 +16,29 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   intl: ^0.15.8
-  dio: ^2.1.10
+  dio: ^3.0.7
   encrypt: ^3.3.1
   crypto: ^2.1.3
   screen: ^0.0.5
   provide: ^1.0.2
   path: ^1.6.4
-  share: ^0.6.2+1
-  path_provider: ^1.3.0
-  device_info: ^0.4.0+2
-  package_info: ^0.4.0+6
-  connectivity: ^0.4.4
-  json_annotation: ^2.4.0
-  shared_preferences: ^0.5.3+4
-  url_launcher: ^5.1.4
-  rxdart: ^0.22.2
-  local_auth: ^0.6.0
+  share: ^0.6.3+4
+  path_provider: ^1.4.5
+  device_info: ^0.4.1+3
+  package_info: ^0.4.0+12
+  connectivity: ^0.4.5+7
+  json_annotation: ^3.0.0
+  shared_preferences: ^0.5.4+8
+  url_launcher: ^5.2.7
+  rxdart: ^0.22.6
+  local_auth: ^0.6.1
   logger: ^0.7.0+2
-  sqflite: ^1.1.6+5
+  sqflite: ^1.1.7+3
 
   # widgets
-  cached_network_image: ^1.1.1
-  flutter_slidable: ^0.5.3
-  webview_flutter: ^0.3.14+1
+  cached_network_image: ^1.1.3
+  flutter_slidable: ^0.5.4
+  webview_flutter: ^0.3.17
   fluttertoast: ^3.1.3
 
 
