--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.5.0
-author: patrick<xcpxcp198608@gmail.com>
+version: 0.5.2
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
 
@@ -15,7 +14,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  intl: ^0.15.8
+  intl: ^0.16.0
   dio: ^3.0.7
   encrypt: ^3.3.1
   crypto: ^2.1.3
@@ -36,7 +35,7 @@ dependencies:
   sqflite: ^1.1.7+3
 
   # widgets
-  cached_network_image: ^1.1.3
+  cached_network_image: ^2.0.0-rc
   flutter_slidable: ^0.5.4
   webview_flutter: ^0.3.17
   fluttertoast: ^3.1.3
