--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: Flutter Common package.
-version: 0.5.9
+version: 0.6.0
 homepage: https://github.com/wiatec
 repository: https://github.com/wiatec/flutter_common
 
@@ -15,37 +15,37 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   intl: ^0.16.0
-  dio: ^3.0.7
-  encrypt: ^3.3.1
+  dio: ^3.0.9
+  encrypt: ^4.0.0
   crypto: ^2.1.3
   screen: ^0.0.5
   provide: ^1.0.2
   path: ^1.6.4
-  share: ^0.6.3+4
-  path_provider: ^1.4.5
-  device_info: ^0.4.1+3
-  package_info: ^0.4.0+12
-  connectivity: ^0.4.5+7
-  json_annotation: ^3.0.0
-  shared_preferences: ^0.5.4+8
-  url_launcher: ^5.2.7
-  rxdart: ^0.22.6
-  local_auth: ^0.6.1
-  logger: ^0.7.0+2
-  sqflite: ^1.1.7+3
+  share: ^0.6.4
+  path_provider: ^1.6.7
+  device_info: ^0.4.2+2
+  package_info: ^0.4.0+17
+  connectivity: ^0.4.8+2
+  json_annotation: ^3.0.1
+  shared_preferences: ^0.5.7
+  url_launcher: ^5.4.5
+  rxdart: ^0.24.0
+  local_auth: ^0.6.2+1
+  logger: ^0.9.1
+  sqflite: ^1.3.0
 
   # widgets
-  cached_network_image: ^2.0.0-rc
+  cached_network_image: ^2.1.0+1
   flutter_slidable: ^0.5.4
-  webview_flutter: ^0.3.17
-  fluttertoast: ^3.1.3
+  webview_flutter: ^0.3.21
+  fluttertoast: ^4.0.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.0.0
-  json_serializable: ^3.0.0
+  build_runner: ^1.9.0
+  json_serializable: ^3.3.0
 
 flutter:
   uses-material-design: true
