--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,13 @@ dependencies:
   rxdart: ^0.24.0
   local_auth: ^0.6.2+1
   logger: ^0.9.1
-  sqflite: ^1.3.0
+  sqflite: ^1.3.1+1
 
   # widgets
-  cached_network_image: ^2.1.0+1
-  flutter_slidable: ^0.5.4
-  webview_flutter: ^0.3.21
-  fluttertoast: ^4.0.1
+  cached_network_image: ^2.3.2+1
+  flutter_slidable: ^0.5.7
+  webview_flutter: ^0.3.22+1
+  fluttertoast: ^7.1.1
 
 
 dev_dependencies:
