--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,33 +13,36 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-  intl: ^0.16.0
-  dio: ^3.0.9
-  encrypt: ^4.0.0
-  crypto: ^2.1.3
+  cupertino_icons: ^1.0.0
+
+  dio: ^3.0.10
+  encrypt: ^4.1.0
+  crypto: ^2.1.5
   screen: ^0.0.5
   provide: ^1.0.2
   path: ^1.6.4
   share: ^0.6.4
-  path_provider: ^1.6.7
+  path_provider: ^1.6.18
   device_info: ^0.4.2+2
   package_info: ^0.4.0+17
   connectivity: ^0.4.8+2
   json_annotation: ^3.0.1
   shared_preferences: ^0.5.7
   url_launcher: ^5.4.5
-  rxdart: ^0.24.0
-  local_auth: ^0.6.2+1
+  rxdart: ^0.25.0
+  local_auth: ^0.6.3
   logger: ^0.9.1
-  sqflite: ^1.3.2+1
+  sqflite: ^1.1.7+2
 
   # widgets
-  cached_network_image: ^2.3.2+1
+  cached_network_image: ^2.5.0
   flutter_slidable: ^0.5.7
-  webview_flutter: ^0.3.22+1
+  webview_flutter: ^1.0.7
   fluttertoast: ^7.1.1
 
+
+#dependency_overrides:
+#  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
